# kimjiuse

./: CMakeLists.txt  README.md
data/: bookmarks.json
flutter_app/lib/: main.dart
include/: db_handler.h  image_analyzer.h  json_parser.h  text_classifier.h
src/: db_handler.c  image_analyzer.cpp  json_parser.c  main.cpp  text_classifier.cpp
